k8s/k8s-service-prd.yaml
apiVersion: v1
kind: Service
metadata:
  name: swpedia
  namespace: swpedia
  annotations:
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  type: NodePort
  selector:
    app: swpedia
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4200
